# stakify-contract

./: .gitignore  Beaker.toml  Cargo.toml  LICENSE  README.md
.beaker/: state.json
.cargo/: config
.circleci/: config.yml
contracts/campaign/: Cargo.toml  README.md
contracts/campaign-factory/: Cargo.toml  README.md
contracts/campaign-factory/examples/: schema.rs
contracts/campaign-factory/schema/: campaign-factory.json
contracts/campaign-factory/schema/raw/: execute.json  instantiate.json  query.json  response_to_campaign.json  response_to_campaigns.json  response_to_config.json  response_to_pool.json  response_to_pools.json
contracts/campaign-factory/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/campaign-factory/src/tests/: env_setup.rs  integration_test.rs
contracts/campaign/examples/: schema.rs
contracts/campaign/schema/: campaign.json
contracts/campaign/schema/raw/: execute.json  instantiate.json  query.json  response_to_campaign_info.json  response_to_nft_staked.json  response_to_nfts.json  response_to_pending_reward.json  response_to_pool.json  response_to_staked_info.json  response_to_staker_info.json
contracts/campaign/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs
deployment_scripts/: contract_setup.js  package-lock.json
deployment_scripts/config/: chain.js
schema/: campaign.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_campaign_info.json  response_to_nft.json  response_to_nft_staked.json  response_to_nfts.json
scripts/: build_contract.sh  store_contract.sh
