[workspace]
members = [
  'contracts/*',
]

[workspace.package]
authors       = ["Aura network"]
version       = "1.0.0"
edition       = "2021"
license       = "MIT"
repository    = "https://github.com/buzz-space/stakify-smart-contract"
homepage      = "https://euphoria.app.stakify.zone/"
rust-version  = "1.65"

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.11
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
campaign         = { path = "./contracts/campaign", features = ["library"]}
bigint            = "4.4.3"
cosmwasm-schema   = "1.1.8"
cosmwasm-std      = "1.1.8"
cosmwasm-storage  = "1.1.8"
cw-multi-test     = "0.16.1"
cw-storage-plus   = "1.0.0"
cw-utils          = "1.0.0"
cw2               = "1.0.0"
cw20              = { version = "1.0.0" }
cw20-base         = {version = "1.0.0", features = ["library"]}
cw721             = "0.16.0"
cw721-base        = { version = "0.16.0", features = ["library"] }
getrandom         = {version = "0.2.8", default-features = false, features = ["js"]}
integer-sqrt      = "0.1.5"
thiserror         = { version = "1.0.37" }
schemars          = "0.8.11"
serde             = { version = "1.0.137", default-features = false, features = ["derive"] }

[workspace.dev-dependencies]
cw-multi-test     = "0.16.1"
cosmwasm-schema   = { version = "1.1.8" }
cosmwasm-storage  = { version = "1.1.8" }



[profile.release.package.campaign]
codegen-units = 1
incremental = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
